--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'F
 The "shutdown" command won't shutdown the host machine. Also check if the "restart" commands has the same problem or not.
 Leave 4 spaces in tab when updating files in AOs.dev using "dev" command.
 When using "dev new" command and the github repo link is asked then clone the repo recursively instead of directly plain cloning.
+Autocomplete filenames when pressed tab.
 
 Improve help messages, giving more detail about the command - such as how to use - when the input is like `help <command-name>`
 Further improve the ';' (run multiple commands in a single line) feature. Make it work like a programming language.
