--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
 ........................................................................................................................
 . Upgrade dotnet from donet 7 to 8 for AOs 2.6
 Re-work 'build.py' and leave all the stuff to 'AOs.dev'
-. Make AOs launch with windows terminal using from a batch file.
+. Make AOs launch with windows terminal using from a batch file. (ask the use to change default terminal application from windows console host to windows terminal if windows terminal is installed).
 x Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'Files.x72\\root' folder then only open the setup page, also don't ask for password].
 Build a search engine which can search for any file, folder or app in your PC like Ueli, Windows search or Apple Spotlight [Not sure if this is going to be a command or a global feature].
 
