--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ There are some bugs in AOs.Parser, fix them. For eg, ">" doesn't work but ">." w
 Make AOs' 'ls' command look exactly like bash's 'ls' command doesn.
 
 . For input 'shout "%username%"' this is the output 'SrijanSrivastava'. This is a bug in lexer. Fix it.
+. Lexer fails to work with prompt system. Fix it.
 
 . Move all features, history and other things to a json file and read that json file to make implementation and extention of all of these easier.
 "settings" command will print all the things from setting.json except cmds.
