--- a/TODO
+++ b/TODO
@@ -17,7 +17,7 @@ x Use "Python.Runtime" module in C# for better connection between C# and Python 
 Autocomplete filenames when pressed tab.
 
 . There are some bugs in AOs.Parser, fix them. For eg, ">" doesn't work but ">." works. Basically if no argument is passed then ">" won't even be called. Fix it and make it work more better with the new Lexer.
-Make AOs' 'ls' command look exactly like bash's 'ls' command doesn.
+x Make AOs' 'ls' command look exactly like bash's 'ls' command does.
 
 Python's virtual env doesn't work with AOs. Fix it.
 
@@ -25,7 +25,7 @@ Python's virtual env doesn't work with AOs. Fix it.
 . Lexer fails to work with prompt system. Fix it.
 
 . Move all features, history and other things to a json file and read that json file to make implementation and extention of all of these easier.
-"settings" command will print all the things from setting.json except cmds.
+. "settings" command will print all the things from setting.json except cmds.
 Refactor the entire AOs.
 
 ........................................................................................................................
